// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack > should be able to parse using TOML files 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};

// EXPORTS
__webpack_require__.d(__webpack_exports__, {
  Z: () => (/* binding */ example)
});

;// CONCATENATED MODULE: ./test/fixtures/toml/en.messages.toml
const greeting = [
	{
		type: 0,
		value: \\"Hello, \\"
	},
	{
		type: 1,
		value: \\"name\\"
	},
	{
		type: 0,
		value: \\"!\\"
	}
];
/* harmony default export */ const en_messages = ({
	greeting: greeting
});

;// CONCATENATED MODULE: ./test/fixtures/toml/input.mjs


function example() {
  return en_messages.greeting
}

var __webpack_exports__default = __webpack_exports__.Z;
export { __webpack_exports__default as default };
"
`;

exports[`webpack > should be compatible with other json files 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};

// EXPORTS
__webpack_require__.d(__webpack_exports__, {
  Z: () => (/* binding */ example)
});

;// CONCATENATED MODULE: ./test/fixtures/with-json/options.json
const options_namespaceObject = {\\"d\\":0};
;// CONCATENATED MODULE: ./test/fixtures/with-json/en.messages.json
const greeting = [
	{
		type: 0,
		value: \\"Hello, \\"
	},
	{
		type: 1,
		value: \\"name\\"
	},
	{
		type: 0,
		value: \\"!\\"
	}
];
const goodbye = [
	{
		type: 0,
		value: \\"Farewell, \\"
	},
	{
		type: 1,
		value: \\"name\\"
	},
	{
		type: 0,
		value: \\"!\\"
	}
];
/* harmony default export */ const en_messages = ({
	greeting: greeting,
	goodbye: goodbye
});

;// CONCATENATED MODULE: ./test/fixtures/with-json/input.mjs



const messageTypes = [
  [0, 'greeting'],
  [1, 'goodbye'],
]

function example() {
  const messageId = messageTypes.find(([type]) => options_namespaceObject.d === type)
  if (messageId == null) throw new Error(\`Unknown type \${options_namespaceObject.d}\`)
  return en_messages[messageId]
}

var __webpack_exports__default = __webpack_exports__.Z;
export { __webpack_exports__default as default };
"
`;

exports[`webpack > should generate bundle 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};

// EXPORTS
__webpack_require__.d(__webpack_exports__, {
  Z: () => (/* binding */ example)
});

;// CONCATENATED MODULE: ./test/fixtures/normal/en.messages.json
const greeting = [
	{
		type: 0,
		value: \\"Hello, \\"
	},
	{
		type: 1,
		value: \\"name\\"
	},
	{
		type: 0,
		value: \\"!\\"
	}
];
/* harmony default export */ const en_messages = ({
	greeting: greeting
});

;// CONCATENATED MODULE: ./test/fixtures/normal/input.mjs


function example() {
  return en_messages
}

var __webpack_exports__default = __webpack_exports__.Z;
export { __webpack_exports__default as default };
"
`;

exports[`webpack > should handle errors as defined 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};

// EXPORTS
__webpack_require__.d(__webpack_exports__, {
  Z: () => (/* binding */ example)
});

;// CONCATENATED MODULE: ./test/fixtures/errored/en.messages.json
const greeting = [
	{
		type: 0,
		value: \\"Hello, <bold>{name}</bold!\\"
	}
];
/* harmony default export */ const en_messages = ({
	greeting: greeting
});

;// CONCATENATED MODULE: ./test/fixtures/errored/input.mjs


function example() {
  return en_messages
}

var __webpack_exports__default = __webpack_exports__.Z;
export { __webpack_exports__default as default };
"
`;

exports[`webpack > should transform to AST JSON 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};

// EXPORTS
__webpack_require__.d(__webpack_exports__, {
  Z: () => (/* binding */ example)
});

;// CONCATENATED MODULE: ./test/fixtures/normal/en.messages.json
const en_messages_namespaceObject = JSON.parse('{\\"greeting\\":[{\\"type\\":0,\\"value\\":\\"Hello, \\"},{\\"type\\":1,\\"value\\":\\"name\\"},{\\"type\\":0,\\"value\\":\\"!\\"}]}');
;// CONCATENATED MODULE: ./test/fixtures/normal/input.mjs


function example() {
  return en_messages_namespaceObject
}

var __webpack_exports__default = __webpack_exports__.Z;
export { __webpack_exports__default as default };
"
`;

exports[`webpack > should transform to JSON of raw messages 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};

// EXPORTS
__webpack_require__.d(__webpack_exports__, {
  Z: () => (/* binding */ example)
});

;// CONCATENATED MODULE: ./test/fixtures/normal/en.messages.json
const en_messages_namespaceObject = JSON.parse('{\\"greeting\\":\\"Hello, {name}!\\"}');
;// CONCATENATED MODULE: ./test/fixtures/normal/input.mjs


function example() {
  return en_messages_namespaceObject
}

var __webpack_exports__default = __webpack_exports__.Z;
export { __webpack_exports__default as default };
"
`;
